--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,6 +26,9 @@ jobs:
           python3 -m pip install --upgrade pip
           sudo apt-get install pandoc doxygen
           pip3 install "pybind11[global]>=2.10.0"
+          cd extern
+          python3 get_cspice.py
+          cd ..
           pip3 install .
       - name: Build docs
         run: |
