--- a/.github/workflows/joss.yml
+++ b/.github/workflows/joss.yml
@@ -20,7 +20,7 @@ jobs:
           journal: joss
           paper-path: ./joss/joss_paper.md
       - name: Upload
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@master
         with:
           name: paper
           path: ./joss/paper.pdf
