--- a/.github/workflows/joss.yml
+++ b/.github/workflows/joss.yml
@@ -18,7 +18,7 @@ jobs:
         uses: openjournals/openjournals-draft-action@master
         with:
           journal: joss
-          paper-path: ./joss/joss_paper.md
+          paper-path: ./joss/paper.md
       - name: Upload
         uses: actions/upload-artifact@master
         with:
