github runner CI issue diagnosis pt.2

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,7 +10,7 @@ on:
       - 'include/**'
       - 'src/**'
       - 'grss/**'
-      - 'tests/python/**'
+      - 'tests/python/**/*.*py*'
 
 jobs:
   sphinx:
