--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,7 +10,7 @@ on:
       - 'include/**'
       - 'src/**'
       - 'grss/**'
-      - 'tests/python/**/*.*py*'
+      - 'tests/python/**/*.ipynb'
 
 jobs:
   sphinx:
