--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ healpy>=1.16.0
 lxml>=5.1.0
 matplotlib>=3.3.0
 numba>=0.55.0
-numpy>=1.22.0
+numpy>=1.22.0,!=2.3  # Exclude numpy 2.3 because astropy.time.Time segfaults with it
 pandas>=1.5.0
 pybind11[global]>=2.10.0
 requests>=2.22.0
