--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.8,<3.13
+  - python>=3.10,<=3.13
   - pip
   - jupyter
   - ipykernel
